# game-life

./: Cargo.toml  Makefile  PING_PONG_AUTOMATON_SUMMARY.md  README.md  SPACETIME_ENTANGLEMENT_SUMMARY.md  build.sh  nintendo_fixed_point.gb  quantum_resistant_demo.gb  sweet_life_game_optimized.gb
assets/roms/: advanced_demo.gb  life_game.gb  ping_pong_automaton.gb  spacetime_entanglement.gb  sweet_life_game.gb
docs/: ARCHITECTURE.md  ENTROPY_SYSTEM_SUMMARY.md  GBA_SUMMARY.md  NEW_LIFE_GAME_SUMMARY.md  NINTENDO_FIXED_POINT_SUMMARY.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUANTUM_RESISTANT_SUMMARY.md  QUANTUM_TETRIS_REPORT.md  REFACTOR_REPORT.md  ROM_GUIDE.md  WINDOWS_TETRIS_REPORT.md
scripts/: demo_tic_tac_toe.sh  full_demo.sh  quick-run.sh  verify_rom.py
scripts/demo/: tetris_demo.sh
scripts/test/: verify_refactor.sh
src/: lib.rs  main.rs
src/core/cpu/: flags.rs  optimizer.rs  registers.rs
src/core/gpu/: tiles.rs
src/core/instructions/: jump.rs  load.rs  mod.rs
src/core/memory/: bus.rs  mod.rs
src/cpu/: cpu.rs  mod.rs
src/debug/: breakpoint.rs  debugger.rs  disassembler.rs  mod.rs
src/emulator/: advanced_gameboy.rs  gameboy.rs  mod.rs
src/entropy/: distribution_optimizer.rs  entropy_pool.rs  entropy_source.rs  mod.rs  quantum_resistant.rs
src/games/demos/: advanced_demo.rs  entropy_demo.rs  gba_demo.rs  mod.rs  quantum_resistant_demo.rs  rom_generator.rs
src/games/life_game/: mod.rs  new_life_game.rs  sweet_life_game.rs  sweet_life_optimized.rs
src/games/tetris/: mod.rs  tetris_game.rs  tetris_gba.rs  windows_tetris.rs
src/games/tic_tac_toe/: mod.rs  tic_tac_toe.rs
src/gba/: cpu.rs  gpu.rs  mod.rs
src/gpu/: lcd.rs  mod.rs  sprites.rs
src/instructions/: arithmetic.rs  instruction.rs
src/lib/common/: mod.rs
src/lib/config/: mod.rs
src/lib/error/: mod.rs
src/rom/: mod.rs
