[package]
name = "gameboy-emulator"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Game Boy emulator written in Rust"
license = "MIT"
repository = "https://github.com/yourusername/gameboy-emulator"
keywords = ["emulator", "gameboy", "rust", "retro"]
categories = ["emulators"]

# 库配置
[lib]
name = "gameboy_emulator"
path = "src/lib.rs"

# 二进制文件配置
# 二进制文件配置 - 按功能分组
# 核心模拟器
[[bin]]
name = "gameboy-emulator"
path = "src/main.rs"

# 游戏实现
[[bin]]
name = "new-life-game"
path = "src/games/life_game/new_life_game.rs"

[[bin]]
name = "sweet-life-game"
path = "src/games/life_game/sweet_life_game.rs"

[[bin]]
name = "sweet-life-optimized"
path = "src/games/life_game/sweet_life_optimized.rs"

[[bin]]
name = "tic-tac-toe"
path = "src/games/tic_tac_toe/tic_tac_toe.rs"

[[bin]]
name = "windows-tetris"
path = "src/games/tetris/windows_tetris.rs"

# 演示程序
[[bin]]
name = "rom-generator"
path = "src/games/demos/rom_generator.rs"

[[bin]]
name = "advanced-demo"
path = "src/games/demos/advanced_demo.rs"

[[bin]]
name = "quantum-resistant-demo"
path = "src/games/demos/quantum_resistant_demo.rs"

[[bin]]
name = "ping-pong-automaton"
path = "src/games/demos/ping_pong_automaton.rs"

[[bin]]
name = "spacetime-entanglement"
path = "src/games/demos/spacetime_entanglement.rs"

[[bin]]
name = "nintendo-fixed-point"
path = "src/games/demos/nintendo_fixed_point.rs"

[[bin]]
name = "gba-demo"
path = "src/games/demos/gba_demo.rs"

[[bin]]
name = "entropy-demo"
path = "src/games/demos/entropy_demo.rs"

# 构建配置
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true

# 依赖项
[dependencies]
# 目前没有外部依赖，所有功能都是原生实现

# 开发依赖
[dev-dependencies]
# 可以添加测试相关的依赖
